objects/erpOrderStatus__x.object
<CustomObject>
    <description>erpOrderStatus</description>
    <externalDataSource>Order_Status</externalDataSource>
    <externalName>erpOrderStatus</externalName>
    <fields>
        <fullName>FLOW_STATUS_CODE_LINE__c</fullName>
        <description>FLOW_STATUS_CODE_LINE</description>
        <externalDeveloperName>FLOW_STATUS_CODE_LINE</externalDeveloperName>
        <label>FLOW_STATUS_CODE_LINE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLOW_STATUS_CODE__c</fullName>
        <description>FLOW_STATUS_CODE</description>
        <externalDeveloperName>FLOW_STATUS_CODE</externalDeveloperName>
        <label>FLOW_STATUS_CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <description>HEADER_ID</description>
        <externalDeveloperName>HEADER_ID</externalDeveloperName>
        <label>HEADER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATE_DATE__c</fullName>
        <description>LAST_UPDATE_DATE</description>
        <externalDeveloperName>LAST_UPDATE_DATE</externalDeveloperName>
        <label>LAST_UPDATE_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <description>LINE_ID</description>
        <externalDeveloperName>LINE_ID</externalDeveloperName>
        <label>LINE_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERED_DATE__c</fullName>
        <description>ORDERED_DATE</description>
        <externalDeveloperName>ORDERED_DATE</externalDeveloperName>
        <label>ORDERED_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORIG_SYS_DOCUMENT_REF__c</fullName>
        <description>ORIG_SYS_DOCUMENT_REF</description>
        <externalDeveloperName>ORIG_SYS_DOCUMENT_REF</externalDeveloperName>
        <label>ORIG_SYS_DOCUMENT_REF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORIG_SYS_LINE_REF__c</fullName>
        <description>ORIG_SYS_LINE_REF</description>
        <externalDeveloperName>ORIG_SYS_LINE_REF</externalDeveloperName>
        <label>ORIG_SYS_LINE_REF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>erpOrderStatus</label>
    <pluralLabel>erpOrderStatus</pluralLabel>
</CustomObject>